# hover-pill

./: .gitignore  Cargo.toml  NOTES.txt  README.md  TODO.txt  flake.nix  index.html
.cargo/: config.toml
assets/: default.level_order.json
assets/levels/: level_1.json  level_1.level.json  level_2.json  level_2.level.json  level_3.json  level_3.level.json  level_4.json  level_4.level.json  level_5.json  level_5.level.json  level_6.json  level_6.level.json  tutorial_1.json  tutorial_1.level.json  tutorial_2.json  tutorial_2.level.json  tutorial_3.json  tutorial_3.level.json
nix/: wasm-server-runner-Cargo.nix  wasm-server-runner.nix
pkg/: hover-pill.d.ts  hover-pill.js  hover-pill_bg.wasm.d.ts  learn-bevy.d.ts  learn-bevy.js  learn-bevy_bg.wasm.d.ts
scripts/: build-wasm  serve
src/: arrow.rs  camera.rs  collision.rs  colored_wireframe.rs  cone.rs  config.rs  continue.rs  controls.rs  cylinder.rs  debug.rs  fuel.rs  fuel_ball.rs  game.rs  hover.rs  jump.rs  level.rs  level_editor.rs  level_order.rs  lib.rs  load_level.rs  main.rs  main_menu.rs  next_level.rs  pause.rs  player.rs  reset.rs  ui.rs  wall.rs  world.rs
src/game/: level.rs  levels.rs  main_menu.rs  state.rs
src/game/level/: collision.rs
src/level/: asset.rs  wall.rs
src/level_order/: asset.rs
src/render/: wireframe.wgsl
src/ui/: button.rs  fuel_bar.rs  main_menu.rs  overlay.rs  tutorial.rs
src/ui/overlay/: level_complete.rs  level_overview.rs
