[package]
name = "learn-bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.8.1"
bevy_atmosphere = "0.4.1"
bevy_rapier3d = { version = "0.16.2", features = ["debug-render"] }
wasm-bindgen = "= 0.2.82"

[lib]
name = "learn_bevy"
crate-type = ["cdylib", "rlib"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true