[package]
name = "hover-pill"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.8.1", features = ["filesystem_watcher"] }
bevy_atmosphere = "0.4.1"
bevy_rapier3d = { version = "0.16.2", features = ["debug-render"] }
serde = { version = "1.0.145", features = ["serde_derive"] }
serde_json = "1.0.85"
wasm-bindgen = "= 0.2.82"

[lib]
name = "hover_pill"
crate-type = ["cdylib", "rlib"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
