[package]
name = "hover-pill"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.10"
bevy_atmosphere = "0.6"
bevy_egui = "0.20.3"
bevy_rapier3d = { version = "0.21", features = ["debug-render"] }
serde = { version = "1.0.145", features = ["serde_derive"] }
serde_json = "1.0.85"
wasm-bindgen = "= 0.2.87"

[lib]
name = "hover_pill"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "hover-pill"
path = "src/main.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.wasm-release]
inherits = "release"
opt-level = "z"
codegen-units = 1
